--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </form>
 
 
-        <nav class="user-nav"></nav>
+        <nav class="user-nav">
           <div class="user-nav__icon-box">
             <svg class="user-nav__icon">
               <use xlink:href="img/sprite.svg#icon-bookmark"></use>
@@ -39,7 +39,6 @@
             <span class="user-nav__notification">7</span>
           </div>
 
-          <nav class="user-nav"></nav>
           <div class="user-nav__icon-box">
             <svg class="user-nav__icon">
               <use xlink:href="img/sprite.svg#icon-chat"></use>
@@ -52,6 +51,7 @@
           <span class="user-nav__user-name">Jonas </span>
           </div>
           
+          </nav>
         </nav>
       </header>
       <div class="content">
