--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ul class="side-nav">
             <li class="side-nav__item">
               <a href="#" class="side-nav__link">
-                <svg class="sid-nav__icon">
+                <svg class="side-nav__icon">
                   <use xlink:href="img/sprite.svg#icon-home"></use>
                 </svg>
                 <span>Hotel</span>
@@ -70,7 +70,7 @@
 
             <li class="side-nav__item">
               <a href="#" class="side-nav__link">
-                <svg class="sid-nav__icon">
+                <svg class="side-nav__icon">
                   <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
                 </svg>
                 <span>flight</span>
@@ -79,7 +79,7 @@
 
             <li class="side-nav__item">
               <a href="#" class="side-nav__link">
-                <svg class="sid-nav__icon">
+                <svg class="side-nav__icon">
                   <use xlink:href="img/sprite.svg#icon-key"></use>
                 </svg>
                 <span>Car rental</span>
@@ -88,7 +88,7 @@
 
             <li class="side-nav__item">
               <a href="#" class="side-nav__link">
-                <svg class="sid-nav__icon">
+                <svg class="side-nav__icon">
                   <use xlink:href="img/sprite.svg#icon-map"></use>
                 </svg>
                 <span>Tours</span>
