--- a/index.html
+++ b/index.html
@@ -157,7 +157,23 @@
 
           <div class="detail">
             <div class="description">
-              description
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi dignissimos debitis ratione sapiente saepe. Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate
+              </p>
+              <p class="paragraph">
+                Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
+              </p>
+
+              <ul class="list">
+                <li class="list__item">Close to the beack</li>
+                <li class="list__item">Breakfest included</li>
+                <li class="list__item">Free airport shuttle</li>
+                <li class="list__item"></li>
+                <li class="list__item"></li>
+                <li class="list__item"></li>
+                <li class="list__item"></li>
+                <li class="list__item"></li>
+              </ul>
             </div>
 
             <div class="user-reviews">
