--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                 <li class="list__item">Close to the beack</li>
                 <li class="list__item">Breakfest included</li>
                 <li class="list__item">Free airport shuttle</li>
-                <li class="list__item"></li>
-                <li class="list__item"></li>
-                <li class="list__item"></li>
-                <li class="list__item"></li>
-                <li class="list__item"></li>
+                <li class="list__item">Free wifi in all rooms</li>
+                <li class="list__item">Air conditioning and heating</li>
+                <li class="list__item">Pets allowed</li>
+                <li class="list__item">We speak all languages</li>
+                <li class="list__item">Perfect for families</li>
               </ul>
             </div>
 
