--- a/index.html
+++ b/index.html
@@ -174,6 +174,17 @@
                 <li class="list__item">We speak all languages</li>
                 <li class="list__item">Perfect for families</li>
               </ul>
+              <div class="recommend">
+                <p class="recommend__count">
+                  lucy and 3 other friends recommend this hotel.
+                </p>
+                <div class="recommend__friends">
+                  <img src="img/user-1.jpg" alt="Friends 1" class="recommend__photo">
+                  <img src="img/user-2.jpg" alt="Friends 2" class="recommend__photo">
+                  <img src="img/user-3.jpg" alt="Friends 3" class="recommend__photo">
+                  <img src="img/user-4.jpg" alt="Friends 4" class="recommend__photo">
+                </div>
+              </div>
             </div>
 
             <div class="user-reviews">
