--- a/index.html
+++ b/index.html
@@ -218,7 +218,12 @@
             </div>
           </div>
 
-
+          </div>
+          <div class="1">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem laboriosam animi maxime repellat unde repellendus rerum labore ut blanditiis praesentium eius amet ab, obcaecati sunt excepturi aut. Numquam, sed sapiente.x 
+            </p>
+          </div>
         </main>
       </div>
     </div>
